--- a/portfolio.html
+++ b/portfolio.html
@@ -200,11 +200,10 @@
 
         <section class="about-text">
           <p>
-            I am a 4th year college student, who's passion is about programming 
-            applications or websites catered to specific needs, 
-            I like talking to people and especially to potential clients and 
-            making new connections. I am a person who is very approachable and 
-            is very easy to talk to.
+            I am a fourth-year college student whose passion lies in programming 
+            applications and websites tailored to specific needs. I enjoy talking 
+            to people, especially potential clients, and making new connections. 
+            I’m approachable and easy to talk to.
           </p>
 
           <p>
@@ -516,7 +515,7 @@
               <span>2021 — Present</span>
 
               <p class="timeline-text">
-                Majored in Computer Science, with a specialty in Core Computer Science.
+                Majored in Computer Science, Deans Lister,with a specialty in Core Computer Science.
               </p>
 
             </li>
@@ -528,7 +527,7 @@
               <span>2019 — 2021</span>
 
               <p class="timeline-text">
-                Took up STEM as my strand.
+                Took up STEM as my strand in SHS.
               </p>
 
             </li>
@@ -540,7 +539,7 @@
               <span>2015 — 2019</span>
 
               <p class="timeline-text">
-                Was already interested in computers at this stage and experimented on programming.
+                During JHS I was already interested in computers at this stage and experimented on programming.
               </p>
 
             </li>
