--- a/portfolio.html
+++ b/portfolio.html
@@ -562,9 +562,101 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Project Manager and Full Stack Developer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                A friend of mine wanted me to make him a website for their inventory. So I 
+                used firebase to host the website and store only text in the database so that I 
+                will not have to pay for a database. As for the images for the inventory, I used 
+                Google Drive to upload the images and use the link to display the images in the website.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Project Manager and Programmer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                A big catering service company hired my team and I to make them a POS 
+                system, and an Inventory app for them. The POS system helps them 
+                be more productive because they do not have to manually input the orders
+                anymore, and after the order is placed the order will be sent to the kitchen,
+                displayed on their TV so that they will not have to relay the orders to the kitchen.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Project Manager and Programmer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                The Varsitarian, once again, hired my team and I to make a scoreboard for
+                their upcoming competition this year 2025. We've had a lot of people 
+                telling us that the scoreboard was better than the one that we have made from
+                last year. proving that our skills and knowledge about programming improves
+                over time.
+              </p>
+
+            </li>
+            
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Programmer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                During my internship my team and I were tasked to make an app for professors
+                to aid them in making exams and quizzes for their students. The app also has a 
+                lot of features like using item banks to create exams and upload to canvas. Another
+                feature is that the app can transform online exams into a pdf file for the professors
+                to print and give out to their students on site. Another feature is that the app can 
+                even aid professors to make their exams in the app itself.
+              </p>
+
+            </li>
+            
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Programmer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                During my internship my team and I were tasked to make a data preprocessing app
+                for our boss to automatically clean the data from anomalies.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Project Manager and Programmer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                We have made a library system for a school and I was the project manager and programmer.
+                What the system does is that books use nfc tags so that the students can borrow books and 
+                return books using their phones. The system also has a confirmation system in the admin 
+                page so that the books will be verified first before being returned.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Project Manager and Lead Programmer</h4>
 
-              <span>2024 — Present</span>
+              <span>2024 — 2025</span>
 
               <p class="timeline-text">
                 I have been partnering with this company to make an Inventory App 
