--- a/portfolio.html
+++ b/portfolio.html
@@ -562,6 +562,19 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Full Stack Developer</h4>
+
+              <span>2025 — 2025</span>
+
+              <p class="timeline-text">
+                I have made myself an app that can help with your finances. The app is called
+                Budget Buddy and I aim to publish it to the app store soon.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Project Manager and Full Stack Developer</h4>
 
               <span>2025 — 2025</span>
