--- a/portfolio.html
+++ b/portfolio.html
@@ -737,9 +737,6 @@
 
       </article>
 
-      <!--
-        - #PORTFOLIO
-      -->
       <article class="portfolio" data-page="portfolio">
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
@@ -747,6 +744,19 @@
       
         <section class="projects">
           <ul class="project-list">
+
+            <li class="project-item active">
+              <a href="https://github.com/amielchristian/pautakan-2025" target="_blank" rel="noopener noreferrer">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/pautakan2025.png" alt="Pautakan 2025" loading="lazy">
+                </figure>
+                <h3 class="project-title">Pautakan 2025</h3>
+                <p class="project-category">Web App</p>
+              </a>
+            </li>
 
             <li class="project-item active">
               <a href="https://github.com/robthomas1120/scoreboardOP" target="_blank" rel="noopener noreferrer">
