--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,179 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alvarez Personal Portfolio</title>
+  <title>Rob Thomas Alvarez - Portfolio | Project Manager & Software Engineer Philippines</title>
+  <meta name="description" content="Hi, I'm Rob Thomas Alvarez, a project manager and software engineer based in Quezon City, Philippines. Computer Science graduate from University of Santo Tomas specializing in web development, mobile apps, and project management solutions.">
+  <meta name="author" content="Rob Thomas Alvarez">
+
+  <!-- Enhanced Open Graph meta tags -->
+  <meta property="og:title" content="Rob Thomas Alvarez - Portfolio | Project Manager & Software Engineer">
+  <meta property="og:description" content="Project Manager and Software Engineer based in Quezon City, Philippines. Computer Science graduate specializing in web applications, mobile apps, and software solutions.">
+  <meta property="og:url" content="https://robthomas1120.github.io/Alvarez_Portfolio/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://robthomas1120.github.io/Alvarez_Portfolio/assets/images/my-avatar.png">
+  <meta property="og:image:width" content="400">
+  <meta property="og:image:height" content="400">
+  <meta property="og:image:alt" content="Rob Thomas Alvarez - Project Manager and Software Engineer">
+  <meta property="og:site_name" content="Rob Thomas Alvarez Portfolio">
+  <meta property="og:locale" content="en_PH">
+
+  <!-- Enhanced Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Rob Thomas Alvarez - Portfolio | Project Manager & Software Engineer">
+  <meta name="twitter:description" content="Project Manager and Software Engineer based in Quezon City, Philippines. Specializing in web development, mobile apps, and software solutions.">
+  <meta name="twitter:image" content="https://robthomas1120.github.io/Alvarez_Portfolio/assets/images/my-avatar.png">
+  <meta name="twitter:image:alt" content="Rob Thomas Alvarez - Project Manager and Software Engineer">
+  <meta name="twitter:creator" content="@robthomas1120">
+
+  <!-- Enhanced SEO meta tags -->
+  <meta name="keywords" content="Rob Thomas Alvarez, Project Manager Philippines, Software Engineer Manila, Full Stack Developer Quezon City, Web Developer UST, Mobile App Developer Philippines, Computer Science Graduate, Software Solutions Philippines, Project Management Manila, Web Development Services">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow">
+  
+  <!-- Geographic meta tags -->
+  <meta name="geo.region" content="PH-NCR">
+  <meta name="geo.placename" content="Manila, Quezon City">
+  <meta name="geo.position" content="14.5995;120.9842">
+  <meta name="ICBM" content="14.5995, 120.9842">
+  
+  <!-- Language and region -->
+  <meta name="language" content="English">
+  <meta name="coverage" content="Worldwide">
+  <meta name="distribution" content="Global">
+  <meta name="rating" content="General">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://robthomas1120.github.io/Alvarez_Portfolio/">
+  
+  <!-- Language alternatives -->
+  <link rel="alternate" hreflang="en-ph" href="https://robthomas1120.github.io/Alvarez_Portfolio/">
+  <link rel="alternate" hreflang="en" href="https://robthomas1120.github.io/Alvarez_Portfolio/">
+
+  <!-- Enhanced Structured Data for Person -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Rob Thomas Alvarez",
+    "alternateName": "Rob Alvarez",
+    "jobTitle": ["Project Manager", "Software Engineer", "Full Stack Developer"],
+    "description": "Computer Science Graduate from University of Santo Tomas, experienced Project Manager and passionate software developer specializing in web applications, mobile apps, and comprehensive software solutions for businesses in the Philippines.",
+    "url": "https://robthomas1120.github.io/Alvarez_Portfolio/",
+    "image": "https://robthomas1120.github.io/Alvarez_Portfolio/assets/images/my-avatar.png",
+    "email": "robthomas.alvarez.cics@ust.edu.ph",
+    "telephone": "+639773806856",
+    "birthDate": "2002-04-30",
+    "nationality": "Filipino",
+    "sameAs": [
+      "https://github.com/robthomas1120",
+      "https://www.linkedin.com/in/rob-thomas-alvarez-998b18273/",
+      "https://www.facebook.com/robthomasalvarez"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Quezon City",
+      "addressRegion": "Metro Manila",
+      "addressCountry": "Philippines",
+      "postalCode": "1100"
+    },
+    "alumniOf": {
+      "@type": "EducationalOrganization",
+      "name": "University of Santo Tomas",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Manila",
+        "addressCountry": "Philippines"
+      }
+    },
+    "knowsAbout": [
+      "Software Development",
+      "Project Management",
+      "Web Development",
+      "Mobile App Development",
+      "Computer Science",
+      "Full Stack Development",
+      "Database Management",
+      "User Interface Design",
+      "Software Solutions",
+      "Team Leadership"
+    ],
+    "hasOccupation": {
+      "@type": "Occupation",
+      "name": "Software Engineer",
+      "occupationLocation": {
+        "@type": "City",
+        "name": "Quezon City, Philippines"
+      },
+      "skills": [
+        "JavaScript",
+        "Python",
+        "React",
+        "Node.js",
+        "Project Management",
+        "Team Leadership",
+        "Client Communication",
+        "Software Architecture"
+      ]
+    }
+  }
+  </script>
+
+  <!-- Breadcrumb Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Rob Thomas Alvarez Portfolio",
+      "item": "https://robthomas1120.github.io/Alvarez_Portfolio/"
+    }]
+  }
+  </script>
+
+  <!-- Website Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Rob Thomas Alvarez Portfolio",
+    "alternateName": "Rob Alvarez Portfolio",
+    "url": "https://robthomas1120.github.io/Alvarez_Portfolio/",
+    "description": "Professional portfolio of Rob Thomas Alvarez, showcasing projects in software development, web applications, and mobile app development.",
+    "author": {
+      "@type": "Person",
+      "name": "Rob Thomas Alvarez"
+    },
+    "inLanguage": "en-PH",
+    "copyrightYear": "2025",
+    "copyrightHolder": {
+      "@type": "Person",
+      "name": "Rob Thomas Alvarez"
+    }
+  }
+  </script>
 
   <!--
-    - favicon
+    - favicon and apple touch icons
   -->
   <link rel="shortcut icon" href="assets/images/my-avatar.png" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/my-avatar.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/my-avatar.png">
+  <link rel="apple-touch-icon" href="assets/images/my-avatar.png">
+
+  <!--
+    - DNS prefetch for external resources
+  -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="dns-prefetch" href="//unpkg.com">
+
+  <!--
+    - preload critical resources
+  -->
+  <link rel="preload" href="./assets/css/style.css" as="style">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" as="style">
 
   <!--
     - custom css link
@@ -23,6 +190,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <!-- Verification tags (add these when you set up search console) -->
+  <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE"> -->
+  <!-- <meta name="msvalidate.01" content="YOUR_BING_VERIFICATION_CODE"> -->
 </head>
 
 <body>
@@ -180,6 +351,10 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
+
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Resources</button>
+          </li>
         </ul>
 
       </nav>
@@ -200,17 +375,17 @@
 
         <section class="about-text">
           <p>
-            I am a fourth-year college student whose passion lies in programming 
+            I am a Computer Science Graduate whose passion lies in programming 
             applications and websites tailored to specific needs. I enjoy talking 
             to people, especially potential clients, and making new connections. 
             I'm approachable and easy to talk to.
           </p>
 
           <p>
-            I am a person who enjoys everything that I do and once I do something
-            I do it whole heartedly and with a bright attitude. I am a punctual
-            person and I respect other people's time and I am also a workaholic 
-            and I have a professional attitude.
+            I am someone who approaches everything I do with enthusiasm and a 
+            positive attitude. When I commit to something, I give it my full 
+            effort and dedication. I am punctual, respectful of others' time, 
+            and maintain a strong work ethic with a professional demeanor.
           </p>
         </section>
 
@@ -812,6 +987,36 @@
           </ul>
         </section>
       </article>
+
+      <!--
+        - #RESOURCES
+      -->
+      
+      <article class="resources" data-page="resources">
+        <header>
+          <h2 class="h2 article-title">Resources</h2>
+        </header>
+        
+        <section class="resources-section">
+          <div class="resource-item">
+            <h3 class="h3 resource-title">Resume & Documents</h3>
+            <p class="resource-description">
+              Download my latest resume and other professional documents.
+            </p>
+            <a href="https://drive.google.com/file/d/1MQwO5f8ItXadHimmVVAGchLqUj1kCDD4/view?usp=sharing" 
+               target="_blank" 
+               rel="noopener noreferrer" 
+               class="resource-link">
+              <ion-icon name="download-outline"></ion-icon>
+              <span>View Resume</span>
+            </a>
+          </div>
+        </section>
+      </article>
+
+    </div>
+
+  </main>
 
   <script src="./assets/js/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
