--- a/portfolio.html
+++ b/portfolio.html
@@ -686,7 +686,7 @@
 
               <h4 class="h4 timeline-item-title">University of Santo Tomas</h4>
 
-              <span>2021 — Present</span>
+              <span>2021 — 2025</span>
 
               <p class="timeline-text">
                 Majored in Computer Science, Deans Lister, with a specialty in Core Computer Science.
